# chatbot_MVP

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  chatbot.py  chroma.py  compose.yaml  learnings.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
chroma/: __init__.py  chroma.py  hash_manager.py  indexer.py  models.py  retriever.py  text_splitter.py
chroma_db/: chroma.sqlite3
curl_scripts/: index_files.sh  reload_docs.sh  test_chatbot.sh  test_health.sh  test_invalid_inputs.sh  test_seller_consultation.sh  test_session_management.sh  tests.sh
docs/: sample_file_hashes.json  sample_retrieval_output.md
github_downloader/: README.md  __init__.py  __main__.py  github_downloader.py  urls.json
scripts/: benchmark_indexing.py  inspect_retrieval.py  reload_db.py  remove_db_files.py  test_two_queries.py
tests/: test_chunking_retrieval.py  test_indexer.py  test_retrieval_live.py  test_text_splitter.py
