[project]
name = "chatbot-mvp"
version = "0.1.0"
requires-python = ">=3.10,<3.14"
dependencies = [
    "chromadb",
    "fastapi",
    "google-genai",
    "langchain-text-splitters",
    "pymupdf4llm",
    "pydantic",
    "python-dotenv",
    "uvicorn",
    "requests",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pyright",
]

[tool.ruff]
target-version = "py312" # Python 3.12
line-length = 88 # 88 characters per line

[tool.ruff.format]
quote-style = "double" # Use double quotes for strings

[tool.pyright]
reportMissingImports = "error"
reportMissingTypeStubs = "warning"
reportImportCycles = "error"

pythonVersion = "3.12"
